# School_Project

./: README.md  数字电路实验报告.docx
C/: calculator.c
C++/: CMakeLists.txt  sorting.cpp
CSA/: 钟承霖-O2O.py
CSA/data/: 介绍.md
DM/: BDCI.md  CNN_B_0.303.ipynb
DS/: Airthmetic Expression Evalution.cpp  Arithmetic Expression Evaluation.c  Book Information Management .c  Project1_基于线性表的图书信息管理  Project2_基于栈的算术表达式求值  Project2_基于栈的算术表达式求值.c  Project3_基于字符串模式匹配算法的病毒检测问题.cpp  Project4_基于哈夫曼树的数据压缩算法  Project6_基于Dijsktra算法的最短路径求解.cpp  Project7_基于广度优先搜索的六度空间理论验证.c  Project8_ 排序算法的实现与分析.c  Verification of the SDST.c  Virus Infection Detection.cpp  data compression.cpp  quicksort.c  shortest path.cpp  介绍.md
Python课后作业/: 1.1-打印输出.py  1.2-Python温度转换程序.py  2.1-求一元二次方程的解.py  2.2-统计大小写字母个数和数字个数.py  3.1-统计正负数个数.py  3.2-用户登录（字典）.py  4.1-列表删除.py  4.2-排序、set性质、list转字符串.py  4.3-绩点计算.py  4.4-Python温度转换程序（异常处理）.py  5.1-求均值和大于均值的值.py  5.2-任意累积.py  5.3-字符串切分连接.py  5.4-素数求和.py  6.1-阶乘累加求和.py  6.2-候先生爬楼梯.py  6.3-分解质因数.py  6.4-哥德巴赫猜想.py  7.1-文件-单位转换.py  7.2-旋转魔方阵（文件）.py  7.3-文本分析与加密.py  8.1-numpy矩阵.py  8.2-创建ndarray.py  8.3-numpy矩阵形状.py  8.4-numpy数据排序.py  t1.1-五角星的绘制.py  t2.1-百分制转五分制.py  t2.2-鸡兔同笼.py  t3.1-凯撒加密.py  t3.2-圆周率的计算.py  t4.1-猜年龄.py  t4.2-反复猜数（异常处理）.py  t5.1-汽水瓶.py  t5.2-杨辉三角.py  t6.1-汉诺塔问题.py  t6.2-分治法找假币.py  t7.1-文本词频统计 -- Hamlet - v2.py  t7.2-文件读取求均值.py  t8.1-线性代数操作.py  介绍.md
人工智能概论/: demo.ipynb  人工智能概论.ipynb  说明.md
算法/: floyd_final.ipynb  说明.md
